# hf

./: README.md  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
hf/: __init__.py  base.py
hf/tests/: __init__.py  test_base.py
misc/: hf_wip.ipynb
