[metadata]
name = hf
version = 0.0.8
url = https://github.com/thorwhalen/hf
platforms = any
description_file = README.md
description = Simple Mapping interface to HuggingFace
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		datasets
		data science
		artificial intelligence
		AI
display_name = hf

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	datasets
	huggingface

